# design-patterns-cpp

./: .gitignore
chp1-solid-principles/single-responsibility/: main.cpp
src/design-patterns/creational-patterns/builder/: HTMLBuilder.cpp  HTMLBuilder.h  HTMLElement.cpp  HTMLElement.h  README.md  main.cpp
src/design-patterns/creational-patterns/builder-intro/: main.cpp
src/design-patterns/creational-patterns/builder/builder-facade/: CMakeLists.txt  Facets.cpp  Person.cpp  Person.h  README.md
src/design-patterns/creational-patterns/builder/builder-groovy-style/: README.md
src/design-patterns/creational-patterns/builder/builder-intro/: HTMLBuilder.cpp
